[project]
name = "scrapper"
version = "0.1.0"
description = "CryptoPanicScraper is an asynchronous Python web scraper that gathers cryptocurrency-related news from [CryptoPanic](https://cryptopanic.com/). It provides sentiment analysis for the news headlines using the NLTK VADER sentiment analysis tool and caches the scraped data for future use."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "nltk>=3.9.1",
    "nodriver>=0.48.1",
    "opencv-python>=4.12.0.88",
    "pandas[excel,parquet,performance,postgresql]>=2.3.3",
    "pathlib>=1.0.1",
    "playwright>=1.48.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
